<resources>
    <string name="app_name">WeMeet</string>
    <!--
    NOTE : Strings written in CAPITAL LETTERS are to be automatically replaced with other values
    -->

    <!-- page connexion -->
    <string name="email_txt">Adresse E-mail</string>
    <string name="mdp_txt">Mot de passe</string>
    <string name="connect_btn_txt">Connexion</string>
    <string name="inscription_btn_txt">Créer un compte</string>
    <string name="register_txt">Pas encore inscrit ?</string>
    <string name="email_input">\@string/email_txt</string>
    <string name="mdp_input">\@string/mdp_txt</string>

    <!-- page info -->
    <string name="info_page_title">Informations personnelles</string>
    <string name="save_btn">Enregistrer</string>
    <string name="info_page_update_btn">Modifier</string>

    <!-- page search event -->
    <string name="search_event_page_title">Evènements</string>
    <string name="search_bar_key">Ville</string>

    <!-- event recycler view -->
    <string name="recycler_view_event_date_text" translatable="false">Participants</string>
    <string name="recycler_view_event_title_text" translatable="false">%s [%s]</string>
    <string name="recycler_view_event_description_text" translatable="false">[%s] %s</string>

    <!-- page new event -->
    <string name="private_txt">Privé</string>
    <string name="public_txt" translatable="false">Public</string>
    <string name="new_event_page_title">Créer un nouvel évènement</string>
    <string name="new_event_title_input">Titre*</string>
    <string name="new_event_description_input" translatable="false">Description</string>
    <string name="new_event_city_input">Ville*</string>
    <string name="new_event_indicator_txt">* champ obligatoire</string>
    <string name="new_event_submit_txt">Sauvegarder</string>

    <!-- page event details -->
    <string translatable="false" name="event_detail_title" >EVENT TITLE</string>
    <string translatable="false" name="event_detail_description" >EVENT DESCRIPTION</string>

    <string name="event_details_locality">Localité : %s</string>
    <string name="event_details_participants" translatable="false">Participants</string>
    <string name="proposed_date_txt">Dates proposées</string>
    <string name="event_details_survey">Sondages</string>
    <string name="organiser_txt">Organisateur</string>

    <string name="availability_page_title">Disponibilité</string>
    <string name="search_event">Rechercher évènement</string>
    <string name="new_event">Nouvel évènement</string>
    <string name="account">Compte</string>
    <string name="all_event">Tous les évènements</string>

    <!--- BOTTOM MENU -->
    <string name="bottom_menu_all_events">Tous les évènements</string>
    <string name="bottom_menu_search">Rechercher évènement</string>
    <string name="bottom_menu_user_account">Votre compte utilisateur</string>
    <string name="bottom_menu_add_event">Ajouter un évènement</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>