<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:useDefaultMargins="true"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@color/default_color">

    <ImageButton
        android:id="@+id/search_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_menu_search"
        android:minHeight="48dp"
        android:layout_weight="1"
        android:src="@drawable/ic_search"
        android:background="@color/default_color"/>

    <ImageButton
        android:id="@+id/add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_menu_add_event"
        android:minHeight="48dp"
        android:layout_weight="1"
        android:src="@drawable/ic_plus"
        android:background="@color/default_color" />

    <ImageButton
        android:id="@+id/all_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_menu_all_events"
        android:minHeight="48dp"
        android:layout_weight="1"
        android:src="@drawable/ic_event"
        android:background="@color/default_color" />

    <ImageButton
        android:id="@+id/user_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_menu_user_account"
        android:minHeight="48dp"
        android:layout_weight="1"
        android:src="@drawable/ic_user"
        android:background="@color/default_color" />
</LinearLayout>