<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/new_event_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_event_page_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"
        android:background="@color/default_color"
        android:gravity="center"
        android:minHeight="75dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="30dp"
        android:text="@string/new_event_title_input"
        android:paddingStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/new_event_header"
        app:layout_constraintStart_toStartOf="parent "
        tools:ignore="RtlSymmetry" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:text="@string/new_event_submit_txt"
        app:layout_constraintBottom_toTopOf="@+id/new_event_bottom_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/new_event_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_bottom_menu_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>