<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="eventViewModel"
            type="com.dagdevelop.wemeet.dataAccess.viewModel.EventViewModel" />
    </data>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/event_details_locality"
            android:paddingVertical="@dimen/default_margin"
            android:src="@drawable/ic_location" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="3.5"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="18dp"
            android:text="@{@string/event_details_locality(eventViewModel.event.cityName)}" />
        <!--
            tools:text="@{@string/event_details_locality(eventViewModel.locality)}" -->


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/event_details_participants"
            android:paddingVertical="@dimen/default_margin"
            android:src="@drawable/ic_user" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="18dp"
            android:text="@string/event_details_participants" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/proposed_date_txt"
            android:paddingVertical="@dimen/default_margin"
            android:src="@drawable/ic_event" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="18dp"
            android:text="@string/proposed_date_txt" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/event_details_survey"
            android:paddingVertical="@dimen/default_margin"
            android:src="@drawable/ic_survey" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="18dp"
            android:text="@string/event_details_survey" />


    </GridLayout>
</layout>