<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_app_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_color"
        android:gravity="center"
        android:minHeight="200dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/second_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_app_logo_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/app_name"
        android:minWidth="150dp"
        android:minHeight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_app_title_txt"
        app:srcCompat="@mipmap/ic_app_logo" />


    <GridLayout
        android:id="@+id/login_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toTopOf="@id/login_bottom_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_logo_ic">

        <ImageView
            android:id="@+id/ic_login_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:contentDescription="@string/email_input"
            android:src="@drawable/ic_check" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="3"
            android:hint="@string/email_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_mdp_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="3"
            android:hint="@string/mdp_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_sign_in_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/email_input"
            android:src="@drawable/ic_mail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_new_account_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="3"
            android:layout_marginTop="8dp"
            android:hint="@string/inscription_btn_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>


    </GridLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/login_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_bottom_menu_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>